fix width and height on mobile, add logo, update page title

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,6 +1,6 @@
 .App {
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   position: absolute;
   margin: 0;
   padding: 0;
